# cleanupx

./: .gitignore  CONTRIBUTING.md  INSTALL.md  INSTALL.md.backup.20250609_151415  PACKAGE_SUMMARY.md  PROJECT_PLAN.md  README.md  README_duplicates.md  RELEASE.md  RELEASE_NOTES_v2.0.0.md  SOCIAL_MEDIA_ANNOUNCEMENTS.md  cleanupx.py  deduplicate_snippets.py  final_combined_snippets.md  find_duplicates.py  generated_alts.json  meta.yaml  process_duplicates.py  project_plan.md  pyproject.toml  rename_cache.json  rename_log.json  requirements.txt  setup.py
.cache/: generated_alts.json  rename_log.json
.github/: FUNDING.yml
_METHODS/: README.md  alt_text_cache.json  batch_1_combined.md  deduper.py  final_combined.md  final_combined_snippets.md  final_ollama.md  gsnipper.py  scrambler.py  xai_alt.py  xcitation.py  ximagenamer.py  xnamer.py  xnamer_cache.json  xsnipper.py
cleanupx/: __main__.py  api.py  config.py  main.py  openai.py
cleanupx_core/: __init__.py
conda-dist/: channeldata.json  index.html
conda-recipe/: meta.yaml
fresh_venv/: pyvenv.cfg
schollama/: Modelfile.schollama  README.md  pyproject.toml
schollama/filellama/: __init__.py  __main__.py
schollama/filellama/cli/: __init__.py
schollama/filellama/core/: change_logger.py  content_extractor.py  file_processor.py  filename_generator.py
schollama/filellama/utils/: logging.py
scraps/: file_operations.py  text_cache_b6d13388_tools_snippets.txt  text_cache_bc5689c0_runCode.txt  tools_snippets.py
scripts/: build.sh  build.sh.backup.20250609_151415  build_and_publish.sh  build_with_sudo.sh  (+2 more)
(+772 files in other folders)
